--- a/KnexMasterclass/package.json
+++ b/KnexMasterclass/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "KnexMasterclass",
+  "name": "knexmasterclass",
   "version": "1.0.0",
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "nodemon src/server.js"
+    "start": "nodemon src/server.js -L"
   },
   "keywords": [],
   "author": "",
